# strava_segments

./: .gitignore  main.py  pyproject.toml  refresh_user_token.sh  user_token_bootstrap.sh
data/: bounding_boxes.csv
functions/json_to_ndjson/: logging_config.py  main.py  requirements.txt  test.py  utils.py
services/token_refresh/: Dockerfile  api_secrets.py  build.sh  logging_config.py  main.py  requirements.txt  utils.py
src/: api_secrets.py  bbox_generator.py  db_init.py  endpoints.yml  find_segments.py  get_bboxes_to_explore.py  json_to_ndjson  refresh_token.py  segment_explorer.py  segment_explorer_lambda.py  segment_finder.py  utils.py
src/sql/: create_bounding_boxes.sql
terraform/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  providers.tf  terraform.tf  terraform_output.json  variables.tf
terraform/db/: outputs.tf  variables.tf
terraform/db_roles/: main.tf
terraform/iam/: main.tf  variables.tf
terraform/modules/bigquery/: main.tf  variables.tf
terraform/modules/cloudfunctions/: main.tf
terraform/modules/db/: main.tf  outputs.tf  variables.tf
terraform/modules/db_roles/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/objectstorage/: main.tf  outputs.tf  variables.tf
terraform/modules/pubsub/: main.tf  outputs.tf  variables.tf
terraform/modules/secretmanager/: main.tf  variables.tf
terraform/objectstorage/: main.tf
terraform/secretmanager/: main.tf  variables.tf
